chore: add `test` script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "test": "vitest run",
         "test:unit": "vitest",
         "lint": "prettier --check . && eslint .",
         "fmt": "prettier --write ."
