chore(dev): ensure sorted imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -109,6 +109,7 @@
         "prefer-template": "error",
         "radix": "error",
         "require-await": "error",
+        "sort-imports": "error",
         "spaced-comment": "warn",
         "yoda": "warn"
     }
