--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-svelte": "^2.32.4",
         "postcss": "^8.4.27",
+        "postgres": "^3.3.5",
         "prettier": "^3.0.0",
         "prettier-plugin-svelte": "^3.0.0",
         "svelte": "^4.1.1",
@@ -39,7 +40,8 @@
         "tslib": "^2.6.1",
         "typescript": "^5.1.6",
         "vite": "^4.4.7",
-        "vitest": "^0.33.0"
+        "vitest": "^0.33.0",
+        "zod": "^3.21.4"
     },
     "type": "module"
 }
