--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,8 @@
     "singleQuote": true,
     "printWidth": 100,
     "plugins": ["prettier-plugin-svelte"],
-    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+    "overrides": [
+        { "files": "*.svelte", "options": { "parser": "svelte" } },
+        { "files": "*.yml", "options": { "tabWidth": 2 } }
+    ]
 }
