--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "devDependencies": {
         "@floating-ui/dom": "^1.4.5",
         "@skeletonlabs/skeleton": "^1.10.0",
-        "@sveltejs/adapter-auto": "^2.1.0",
+        "@sveltejs/adapter-node": "^1.3.1",
         "@sveltejs/kit": "^1.22.3",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
