--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules
 /.svelte-kit
 /package
 /data
-.env
-.env.*
+*.env
+*.env.*
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
