--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "hatid",
     "version": "0.0.1",
     "private": true,
+    "packageManager": "pnpm@8.6.10",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
