--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
         "autoprefixer": "^10.4.14",
+        "blake3": "^3.0.0",
         "eslint": "^8.45.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-svelte": "^2.32.4",
+        "http-status-codes": "^2.2.0",
         "postcss": "^8.4.27",
         "postgres": "^3.3.5",
         "prettier": "^3.0.0",
@@ -43,6 +45,12 @@
         "vite": "^4.4.7",
         "vitest": "^0.33.0",
         "zod": "^3.21.4"
+    },
+    "pnpm": {
+        "overrides": {
+            "blake3-wasm": "^3.0.0",
+            "@c4312/blake3-internal": "^3.0.0"
+        }
     },
     "type": "module"
 }
