--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "sync": "svelte-kit sync",
         "test": "vitest run",
         "test:unit": "vitest",
         "lint": "prettier --check . && eslint .",
