--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
         "test:unit": "vitest",
         "lint": "prettier --check . && eslint .",
         "fmt": "prettier --write .",
-        "db:init": "initdb -D data",
-        "db:start": "postgres -D data",
+        "db:init": "pg_ctl init -D data",
+        "db:start": "pg_ctl start -D data",
+        "db:stop": "pg_ctl stop -D data",
         "db:template": "psql -f db/init.sql -1 template1",
         "db:create": "createdb",
         "db:drop": "dropdb",
