--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,9 +4,11 @@
     "tabWidth": 4,
     "singleQuote": true,
     "printWidth": 100,
-    "plugins": ["prettier-plugin-svelte"],
+    "trailingComma": "all",
+    "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+    "pluginSearchDirs": false,
     "overrides": [
-        { "files": "*.svelte", "options": { "parser": "svelte" } },
+        { "files": "*.svelte", "options": { "parser": "svelte", "svelteStrictMode": true } },
         { "files": "*.yml", "options": { "tabWidth": 2 } }
     ]
 }
