--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "postcss": "^8.4.27",
         "postgres": "^3.3.5",
         "prettier": "^2.8.8",
+        "prettier-plugin-sql": "^0.14.0",
         "prettier-plugin-svelte": "^2.10.1",
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.1.2",
