--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "sync": "svelte-kit sync",
         "test": "vitest run",
         "test:unit": "vitest",
-        "lint": "prettier --check --plugin prettier-plugin-svelte --plugin prettier-plugin-tailwindcss . && eslint .",
-        "fmt": "prettier --write --plugin prettier-plugin-svelte --plugin prettier-plugin-tailwindcss .",
+        "lint": "prettier --check --plugin prettier-plugin-sql --plugin prettier-plugin-svelte --plugin prettier-plugin-tailwindcss . && eslint .",
+        "fmt": "prettier --write --plugin prettier-plugin-sql --plugin prettier-plugin-svelte --plugin prettier-plugin-tailwindcss .",
         "db:init": "initdb -D data -U postgres",
         "db:start": "postgres -D data",
         "db:template": "psql -U postgres -f db/init.sql -1 template1",
