--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@skeletonlabs/skeleton": "^1.11.0",
         "@sveltejs/adapter-node": "^1.3.1",
         "@sveltejs/kit": "^1.22.5",
+        "@tailwindcss/forms": "^0.5.4",
         "@typescript-eslint/eslint-plugin": "^6.3.0",
         "@typescript-eslint/parser": "^6.3.0",
         "autoprefixer": "^10.4.14",
