--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
             "blake3-wasm": "^3.0.0",
             "@c4312/blake3-internal": "^3.0.0"
         }
+    },
+    "dependencies": {
+        "moment": "^2.29.4"
     }
 }
