--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.2.0",
         "svelte-check": "^3.5.0",
+        "svelte-material-icons": "^3.0.5",
         "tailwindcss": "^3.3.3",
         "tslib": "^2.6.1",
         "typescript": "^5.1.6",
