--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "devDependencies": {
         "@floating-ui/dom": "^1.5.1",
+        "@icons-pack/svelte-simple-icons": "^3.0.0",
+        "@krowten/svelte-heroicons": "^0.1.0",
         "@skeletonlabs/skeleton": "^1.11.0",
         "@sveltejs/adapter-node": "^1.3.1",
         "@sveltejs/kit": "^1.22.6",
@@ -46,7 +48,6 @@
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.2.0",
         "svelte-check": "^3.5.0",
-        "svelte-material-icons": "^3.0.5",
         "tailwindcss": "^3.3.3",
         "tslib": "^2.6.1",
         "typescript": "^5.1.6",
