--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     },
     "devDependencies": {
         "@floating-ui/dom": "^1.5.1",
-        "@icons-pack/svelte-simple-icons": "^3.0.0",
         "@krowten/svelte-heroicons": "^0.1.0",
         "@skeletonlabs/skeleton": "^1.11.0",
         "@sveltejs/adapter-node": "^1.3.1",
@@ -60,5 +59,9 @@
             "blake3-wasm": "^3.0.0",
             "@c4312/blake3-internal": "^3.0.0"
         }
+    },
+    "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "svelte-fa": "^3.0.4"
     }
 }
