--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "devDependencies": {
         "@floating-ui/dom": "^1.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
         "@krowten/svelte-heroicons": "^0.1.0",
         "@skeletonlabs/skeleton": "^1.11.0",
         "@sveltejs/adapter-node": "^1.3.1",
@@ -47,6 +48,7 @@
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.2.0",
         "svelte-check": "^3.5.0",
+        "svelte-fa": "^3.0.4",
         "tailwindcss": "^3.3.3",
         "tslib": "^2.6.1",
         "typescript": "^5.1.6",
@@ -59,9 +61,5 @@
             "blake3-wasm": "^3.0.0",
             "@c4312/blake3-internal": "^3.0.0"
         }
-    },
-    "dependencies": {
-        "@fortawesome/free-brands-svg-icons": "^6.4.2",
-        "svelte-fa": "^3.0.4"
     }
 }
