--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "db:func": "psql -U postgres -f db/funcs.sql -1 template1",
         "db:create": "createdb -U postgres",
         "db:drop": "dropdb -U postgres",
-        "db:shell": "psql -U postgres"
+        "db:shell": "psql -U postgres",
+        "db:admin": "psql -U postgres -f db/admin.sql -1"
     },
     "devDependencies": {
         "@floating-ui/dom": "^1.5.1",
