--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "prettier-plugin-svelte": "^2.10.1",
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.2.0",
+        "svelte-autosize": "^1.1.0",
         "svelte-check": "^3.5.0",
         "svelte-fa": "^3.0.4",
         "tailwindcss": "^3.3.3",
