--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
         "@sveltejs/adapter-node": "^1.3.1",
         "@sveltejs/kit": "^1.22.6",
         "@tailwindcss/forms": "^0.5.4",
+        "@types/autosize": "^4.0.1",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
         "@typescript-eslint/parser": "^6.4.0",
         "autoprefixer": "^10.4.15",
+        "autosize": "^6.0.1",
         "blake3": "^3.0.0",
         "eslint": "^8.47.0",
         "eslint-config-prettier": "^8.10.0",
@@ -47,7 +49,6 @@
         "prettier-plugin-svelte": "^2.10.1",
         "prettier-plugin-tailwindcss": "^0.4.1",
         "svelte": "^4.2.0",
-        "svelte-autosize": "^1.1.0",
         "svelte-check": "^3.5.0",
         "svelte-fa": "^3.0.4",
         "tailwindcss": "^3.3.3",
