--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "type": "module",
     "private": true,
     "packageManager": "pnpm@8.7.0",
+    "engines": {
+        "node": ">=20"
+    },
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
