--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,15 @@ jobs:
       - name: Setup Repository
         uses: actions/checkout@v3
       - name: Enable Corepack for `pnpm`
-        run: corepack enable
-      - name: Get `pnpm` Store Directory
-        shell: bash
         run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      - uses: actions/cache@v3
-        name: Setup `pnpm` Cache
+          corepack enable
+          corepack prepare pnpm@8.7.0 --activate
+      - uses: actions/setup-node@v3
+        name: Setup Node.js
         with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: '20.5.1'
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
       - name: Install Dependencies
         run: pnpm install
       - name: Check Formatting and Lints
