--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "devDependencies": {
         "@fortawesome/free-brands-svg-icons": "^6.4.2",
         "@krowten/svelte-heroicons": "^0.1.0",
-        "@skeletonlabs/skeleton": "^1.12.0",
+        "@skeletonlabs/skeleton": "^2.0.0",
+        "@skeletonlabs/tw-plugin": "^0.1.0",
         "@sveltejs/adapter-node": "^1.3.1",
         "@sveltejs/kit": "^1.23.0",
         "@tailwindcss/forms": "^0.5.6",
@@ -58,6 +59,7 @@
         "tslib": "^2.6.2",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
+        "vite-plugin-tailwind-purgecss": "^0.1.3",
         "vitest": "^0.34.3",
         "zod": "^3.22.2"
     },
