--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,9 +6,15 @@
     "printWidth": 100,
     "trailingComma": "all",
     "plugins": ["prettier-plugin-sql", "prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-    "pluginSearchDirs": false,
     "overrides": [
-        { "files": "*.svelte", "options": { "parser": "svelte", "svelteStrictMode": true } },
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte",
+                "svelteStrictMode": true,
+                "svelteAllowShorthand": true
+            }
+        },
         {
             "files": "*.sql",
             "options": {
